# MSz

./: CMakeLists.txt
.github/workflows/: build.yml
examples/: ex2_MSz_derive_apply_edits.cpp  ex3_MSz_zstd_omp.cpp
examples/python/: example_msz.py  example_msz_omp.py
include/api/: MSz.h
src/api/: MSz.cpp
src/internal/MSz_OMP/: MSz_omp.cpp  MSz_omp.h
src/internal/MSz_Serial/: MSz_serial.cpp  MSz_serial.h
src/python/: msz_py.cpp
